// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArraySchema denormalization Class denormalizes a single entity 1`] = `
Array [
  Object {
    "id": 1,
    "name": "Milo",
  },
  Object {
    "id": 2,
    "name": "Jake",
  },
]
`;

exports[`ArraySchema denormalization Class denormalizes multiple entities 1`] = `
Array [
  Object {
    "id": "123",
    "type": "cats",
  },
  Object {
    "id": "123",
    "type": "people",
  },
  Object {
    "id": "789",
  },
  Object {
    "id": "456",
    "type": "cats",
  },
]
`;

exports[`ArraySchema denormalization Class does not assume mapping of schema to attribute values when schemaAttribute is not set 1`] = `
Object {
  "entities": Object {
    "cats": Object {
      "1": Object {
        "id": 1,
      },
      "2": Object {
        "id": 2,
      },
    },
  },
  "result": Array [
    Object {
      "cat": 1,
      "id": 5,
    },
    Object {
      "cat": 2,
      "id": 6,
    },
  ],
}
`;

exports[`ArraySchema denormalization Class returns the input value if is not an array 1`] = `
Object {
  "fillings": Object {},
  "id": "123",
}
`;

exports[`ArraySchema denormalization Object denormalizes a single entity 1`] = `
Array [
  Object {
    "id": 1,
    "name": "Milo",
  },
  Object {
    "id": 2,
    "name": "Jake",
  },
]
`;

exports[`ArraySchema denormalization Object returns the input value if is not an array 1`] = `
Object {
  "fillings": null,
  "id": "123",
}
`;
